--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
 
             <!-- Inventory Page Content -->
             <div id="inventory-page" class="tab-content">
-                <div class="mb-8">
+                <!-- <div class="mb-8">
                     <h2 class="text-2xl font-semibold main-text mb-4">Inventory Overview</h2>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                         <div class="dashboard-card rounded-xl p-6">
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="mb-8">
                     <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-4 gap-4">
@@ -613,7 +613,7 @@
                 const newPasswordInput = document.getElementById('newPassword');
                 const editUserIdInput = document.getElementById('editUserId');
                 const logTableBody = document.getElementById('log-table-body');
-                
+
                 const renderUsersTable = (users) => {
                     usersTableBody.innerHTML = '';
                     users.forEach(user => {
@@ -641,7 +641,7 @@
                         usersTableBody.appendChild(row);
                     });
                 };
-                
+
                 const renderLogTable = (logs) => {
                     logTableBody.innerHTML = '';
                     logs.forEach(log => {
